fix footer sizing on mobile

--- a/assets/common.css
+++ b/assets/common.css
@@ -994,6 +994,7 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: calc(var(--font-size-base) + 15px);
     width: 100%;
     background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(10px);
@@ -1020,6 +1021,8 @@ footer {
     }
 
     & span {
+        font-size: var(--font-size-base);
+
         & a {
             color: var(--color-text);
         }
